force-app/main/default/objects/Expense/fields/CoIT_Expense_SIAB_Id__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Expense_SIAB_Id__c</fullName>
    <formula>CoIT_ExpenseType_Id__r.CoIT_External_SIAB_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense SIAB Id</label>
    <type>Text</type>
</CustomField>