force-app/main/default/objects/Expense/fields/CoIT_ExpenseType_Id__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ExpenseType_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expense Type</label>
    <referenceTo>CoIT_Expense_Type__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>