force-app/main/default/objects/Expense/fields/CoIT_To_AP__c.field-meta.xml
<CustomField>
    <fullName>CoIT_To_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use for Approval Process CoIT AP Novedad Material on Expense</description>
    <label>To AP?</label>
    <type>Checkbox</type>
</CustomField>