force-app/main/default/objects/Expense/fields/COIT_Units__c.field-meta.xml
<CustomField>
    <fullName>COIT_Units__c</fullName>
    <formula>TEXT(Quantity)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units CLS</label>
    <type>Text</type>
</CustomField>