force-app/main/default/objects/Expense/fields/CoIT_WorkOrderLineItemId__c.field-meta.xml
<CustomField>
    <fullName>CoIT_WorkOrderLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>