force-app/main/default/objects/Expense/fields/CoIT_Zone__c.field-meta.xml
<CustomField>
    <fullName>CoIT_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zona</label>
    <referenceTo>CoIT_Zone__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>