force-app/main/default/objects/Expense/fields/CoIT_ZoneName__c.field-meta.xml
<CustomField>
    <fullName>CoIT_ZoneName__c</fullName>
    <formula>CoIT_Zone__r.CoIT_Zone_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Zona</label>
    <type>Text</type>
</CustomField>