force-app/main/default/objects/Expense/listViews/All_Expenses.listView-meta.xml
<ListView>
    <fullName>All_Expenses</fullName>
    <columns>Name</columns>
    <columns>ExpenseType</columns>
    <columns>Amount</columns>
    <columns>TransactionDate</columns>
    <columns>Description</columns>
    <columns>ExpenseStartDate</columns>
    <columns>ExpenseEndDate</columns>
    <columns>WorkOrder</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CoIT_ExpenseType_Id__c</field>
        <operation>contains</operation>
        <value>carro</value>
    </filters>
    <label>All Expenses</label>
</ListView>